--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "cknow/laravel-money": "^8.3",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
