--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "laravel/tinker": "^2.9",
         "livewire/flux-pro": "^1.1",
         "livewire/livewire": "^3.4",
-        "livewire/volt": "^1.0",
-        "spatie/laravel-pdf": "^1.5"
+        "livewire/volt": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
